# ComputerGraphicsEngine

./: CMakeLists.txt  Color.cpp  Color.h  Color1.cpp  Color1.h  FOUTJES ENGINE.txt  Face.cpp  Face.h  Figure.cpp  Figure.h  Line2D.cpp  Line2D.h  PlatonischeLichamen.cpp  PlatonischeLichamen.h  Point2D.cpp  Point2D.h  StochasticRule.cpp  ThreeD.cpp  ThreeD.h  Wireframes.cpp  Wireframes.h  ZBuffer.h  ZBuffering.cpp  ZBuffering.h  draw3DLsystem.cpp  draw3DLsystem.h  easy_image.cc  easy_image.h  engine.cc  introduction.cpp  introduction.h  l_parser.cc  l_parser.h  lightClass.h  lightedZbuffering.cpp  translations.cpp  translations.h
ini/: 32_segment_curve.L2D  L-systemen-oef1.ini  circles.L2D  circles_stochast.L2D  filelist  grass.L2D  grass_stochast.L2D  l_systems002.ini  sierpinski_arrowhead_with_stochast.L2D  stochast_l_systems002.ini
l_systems/: dragon_curve.L2D  koch_curve1.L2D  koch_curve2.L2D  koch_curve3.L2D  koch_curve4.L2D  koch_curve5.L2D  koch_curve6.L2D  koch_curve7.L2D  koch_snowflake.L2D  peano_curve.L2D  sierpinski_arrowhead.L2D  snowflake_triangle.L2D
l_systems_stochast/: circles_stochast.L2D  filelist  grass_stochast.L2D  l_systems002_stochast.ini  l_systems004_stochast.ini
line_drawings/: filelist
src/: Color1.cpp  Face.cpp  Face.h  Point2D.h  Wireframes.h  ZBuffer.cpp  ZBuffering.h  draw3DLsystem.cpp  easy_image.h  engine.cc  introduction.h  l_parser.cc  lightClass.cpp  lightedZbuffering.h  translations.h
wireframes/: Files Cylinder  filelist  wireframes011.ini  wireframes012.ini
z_buffered_wireframes/: filelistCopy
